--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ google-auth==2.6.6
 google-auth-oauthlib==0.4.6
 google-pasta==0.2.0
 grpcio==1.44.0
+gunicorn==20.1.0
 h5py==3.6.0
 idna==3.3
 itsdangerous==2.1.2
@@ -33,6 +34,7 @@ numpy==1.21.6
 oauthlib==3.2.0
 opt-einsum==3.3.0
 packaging==21.3
+pandas==1.4.2
 pooch==1.6.0
 protobuf==3.20.1
 pyasn1==0.4.8
@@ -40,6 +42,8 @@ pyasn1-modules==0.2.8
 pycparser==2.21
 pydub==0.25.1
 pyparsing==3.0.8
+python-dateutil==2.8.2
+pytz==2022.1
 requests==2.27.1
 requests-oauthlib==1.3.1
 resampy==0.2.2
