--- a/.github/workflows/azure-webapps-python.yml
+++ b/.github/workflows/azure-webapps-python.yml
@@ -20,8 +20,8 @@
 name: Build and deploy Python app to Azure Web App
 
 env:
-  AZURE_WEBAPP_NAME: symphony-aztechs  # set this to the name of your Azure Web App
-  PYTHON_VERSION: '3.10'              # set this to the Python version to use
+  AZURE_WEBAPP_NAME: symphony-aztechs # set this to the name of your Azure Web App
+  PYTHON_VERSION: '3.10' # set this to the Python version to use
 
 on:
   push:
@@ -45,13 +45,13 @@ jobs:
       - name: Create and start virtual environment
         run: |
           python -m venv venv
-          source venv/bin/activate
+          venv/bin/activate
 
       - name: Install dependencies
         run: pip install -r requirements.txt
-        
+
       # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
-      
+
       - name: Upload artifact for deployment jobs
         uses: actions/upload-artifact@v3
         with:
@@ -73,7 +73,7 @@ jobs:
         with:
           name: python-app
           path: .
-          
+
       - name: 'Deploy to Azure Web App'
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v2
