--- a/.github/workflows/azure-webapps-python.yml
+++ b/.github/workflows/azure-webapps-python.yml
@@ -45,7 +45,7 @@ jobs:
       - name: Create and start virtual environment
         run: |
           python -m venv venv
-          venv/bin/activate
+          venv/bin/activate.bat
 
       - name: Install dependencies
         run: pip install -r requirements.txt
